--- a/views/404.html
+++ b/views/404.html
@@ -10,7 +10,38 @@
 </head>
 
 <body>
-    NIX DA!
+    <header>
+        <div class="logo">
+            <img src="/img/logo.jpeg" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="/">Why Alivio</a></li>
+                <li><a href="/solutions">Solutions</a></li>
+                <li><a href="/community">Community</a></li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+        </nav>
+        <a class="sign" href="#">Sign in</a>
+        <div></div>
+        <button>Start Trial</button>
+        </div>
+    </header>
+
+
+
+
+    <footer>
+        <div>
+            <h2>Alivio</h2>
+            <ul>
+                <li>Why Alivio</li>
+                <li>Solutions</li>
+                <li>Community</li>
+                <li>Pricing</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
