--- a/views/community.html
+++ b/views/community.html
@@ -10,7 +10,58 @@
 </head>
 
 <body>
-    Ich bin die Community Seite
+    <header>
+        <div class="logo">
+            <img src="/img/logo.jpeg" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="/">Why Alivio</a></li>
+                <li><a href="/solutions">Solutions</a></li>
+                <li><a href="/community">Community</a></li>
+                <li><a href="#">Pricing</a></li>
+            </ul>
+        </nav>
+        <a class="sign" href="#">Sign in</a>
+        <div></div>
+        <button>Start Trial</button>
+        </div>
+    </header>
+
+    <section>
+
+    </section>
+
+    <section class="hero">
+        <div>
+            <h1>Be aware,
+                Manage well.
+            </h1>
+            <p>Everyone experiences stress in different ways.
+                Let Alivio guide you, in a personalized journal experience, to overcome your stress.
+            </p>
+            <button>Find Your Way</button>
+        </div>
+    </section>
+
+
+
+
+
+
+    <footer>
+        <div>
+            <h2>Alivio</h2>
+            <ul>
+                <li>Why Alivio</li>
+                <li>Solutions</li>
+                <li>Community</li>
+                <li>Pricing</li>
+            </ul>
+        </div>
+    </footer>
+</body>
+
 </body>
 
 </html>
