--- a/views/404.html
+++ b/views/404.html
@@ -29,7 +29,9 @@
     </header>
 
 
-
+    <section class="error">
+        <img src="img/error.png" alt="">
+    </section>
 
     <footer>
         <div>
