--- a/views/community.html
+++ b/views/community.html
@@ -44,7 +44,24 @@
         </div>
     </section>
 
+    <section class="community">
+        <div class="blond">
+            <img src="img/blond.png" alt="">
+            <img src="img/card.jpeg" alt="">
+        </div>
 
+        <div>
+            <p>Our product</p>
+            <h1>You tell us your stress,
+                We make your diary
+            </h1>
+            <p>Everyone experiences it, and in different ways.
+                Let Alivio guide you, in a personalized journal experience, to overcome your stress.
+            </p>
+            <button>Find Your Way</button>
+        </div>
+
+    </section>
 
 
 
