--- a/views/solutions.html
+++ b/views/solutions.html
@@ -45,7 +45,18 @@
     </section>
 
 
+    <section class="solution">
+        <div>
+            <h1>Let's hear about Kayla's success story</h1>
+            <p>See how well Alivio works in a real customer’s life. </p>
+            <button>Let’s get started</button>
+        </div>
 
+        <div>
+            <img src="/img/solution.png" alt="">
+        </div>
+    </section>
+    <img class="play" src="/img/play.png" alt="">
 
 
 
